--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -38,7 +38,7 @@
 
   "LABELS": {
     "NAME": "الاسم",
-    "E_MAIL": "البريد الالكارونى",
+    "E_MAIL": "البريد الإلكترونى",
     "PHONE": "رقم الموبيل",
     "COUNRTY": "البلد",
     "ATTACH_FILES": "ملف",
@@ -63,7 +63,7 @@
   },
   "VALIDATION_MESSAGES": {
     "EMAIL_REQUIRED": "البريد الإلكترونى مطلوب",
-    "EMAIL_INVALID": "من فضلك أكتب بريد إلكترونى صحيح",
+    "EMAIL_INVALID": "من فضلك أكتب بريد الإلكترونى صحيح",
     "INVALID_NUMBER": "من فضلك أكتب رقم صحيح",
     "COUNTRY_REQUIRED": "الدلوة مطلوبه",
     "INVALID_ENGLISH": "مسموح بأحرف أنجليزية فقط",
